<resources>
    <string name="app_name">Weather App</string>

    <string name="menu_action_privacy_policy">Privacy Policy</string>
    <string name="menu_action_open_source_licences">Open Source Licences</string>

    <string name="privacy_policy_url">https://openweather.co.uk/privacy-policy</string>

    <string name="current_condition_label">Current Condition :</string>
    <string name="temperature_label">Temperature :</string>
    <string name="wind_speed_label">Wind Speed :</string>
    <string name="wind_direction_label">Wind Direction :</string>
    <string name="refresh_label">Refresh</string>

    <string name="message_loading">Loading your data</string>

    <string name="error_no_relevant_data">There is no previous data available.\nRefresh to get the latest.</string>
    <string name="error_unable_to_load_link">Unable to load link</string>
    <string name="error_no_connectivity">You are offline. Please check your network connection and try again.</string>
    <string name="error_download">An error has occurred while trying to fetch new data. Please try again later or contact your administrator.</string>
    <string name="error_location_permission_needed">Please enable the location permission to load weather data.</string>
    <string name="error_location_not_found">Location could not be established. Please turn on your location.</string>
    <string name="error_not_available">n/a</string>
    <string name="warning_last_fetched">"Last fetched for %s at %s on %s</string>

    <string name="value_degree_celsius">%1$d&#8451;</string>
    <string name="value_miles_per_hour">%1$dmph</string>
    <string name="value_north">North</string>
    <string name="value_north_east">North East</string>
    <string name="value_east">East</string>
    <string name="value_south_east">South East</string>
    <string name="value_south">South</string>
    <string name="value_south_west">South West</string>
    <string name="value_west">West</string>
    <string name="value_north_west">North West</string>

    <string name="ok">OK</string>
    <string name="dismiss">Dismiss</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>

    <string name="location_permission_title">Location permission required</string>
    <string name="location_permission_rationale">This application needs your location permission to retrieve weather information that\'s relevant to you.\nPlease enable this permission.</string>

    <string name="content_description_icon">weather icon</string>
</resources>