<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ro.seacat.weatherapp.ui.MainActivityViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#373F51B5"
                android:gravity="center"
                android:padding="12dp"
                android:text="@{viewModel.displayLastUpdatedMessage}"
                android:visibility="@{viewModel.displayLastUpdatedMessage != null}"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Last fetched data at 12:30 on 12.01.2021" />

            <androidx.cardview.widget.CardView
                android:id="@+id/weatherCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:elevation="3dp"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:layout_editor_absoluteX="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="24dp"
                    android:text="@string/error_no_relevant_data"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="@{!safeUnbox(viewModel.loaded), default=gone}" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{safeUnbox(viewModel.loaded)}">

                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        app:src="@{viewModel.liveIcon}"
                        tools:src="@drawable/ic_launcher_background" />

                    <LinearLayout
                        android:id="@+id/one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/icon"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/current_condition_label" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@{viewModel.liveWeather.currentCondition}"
                            tools:text="Windy" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/one"
                        android:layout_toStartOf="@+id/icon"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/temperature_label" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:temperature="@{viewModel.liveWeather.temperature}"
                            tools:text="1 C" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/three"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/two"
                        android:layout_toStartOf="@+id/icon"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/wind_speed_label" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:speed="@{viewModel.liveWeather.windSpeed}"
                            tools:text="20mph" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/four"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/three"
                        android:layout_toStartOf="@+id/icon"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/wind_direction_label" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:windDirection="@{viewModel.liveWeather.windDegrees}"
                            tools:text="North East" />
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/refresh_label"
            android:enabled="@{!safeUnbox(viewModel.loading)}"
            app:srcCompat="@drawable/ic_refresh" />

        <ProgressBar
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center"
            android:visibility="@{safeUnbox(viewModel.loading)}"
            app:layout_anchor="@+id/constraintLayout"
            app:layout_anchorGravity="center" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>